<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 타이틀 -->
    <com.example.mvvmappapplication.custom.HSAutofitTextView
        android:id="@+id/titleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginTop="@dimen/dimen_12"
        android:layout_marginRight="@dimen/dimen_15"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/dimen_3"
        android:maxLines="2"
        android:textSize="@dimen/dimen_24"
        android:textStyle="bold|italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_11"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_1"
                android:layout_marginRight="@dimen/dimen_1"
                android:background="?attr/backgroundColor4"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dimen_15"
                android:paddingRight="@dimen/dimen_15">

                <com.example.mvvmappapplication.custom.HSAutofitTextView
                    android:id="@+id/descTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_13"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/dimen_4"
                    android:text="@string/dialog_voice_phishing_caution1"
                    android:textSize="@dimen/dimen_14" />

                <com.example.mvvmappapplication.custom.HSTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:layout_marginBottom="@dimen/dimen_13"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/dimen_4"
                    android:text="@string/dialog_voice_phishing_caution2"
                    android:textColor="?attr/colorSecondaryRed"
                    android:textSize="@dimen/dimen_12" />

            </LinearLayout>


            <com.example.mvvmappapplication.custom.HSTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_15"
                android:layout_marginTop="@dimen/dimen_15"
                android:layout_marginRight="@dimen/dimen_15"
                android:lineSpacingExtra="@dimen/dimen_4"
                android:text="@string/dialog_voice_phishing_caution3"
                android:textSize="@dimen/dimen_12" />

            <com.example.mvvmappapplication.custom.HSTextView
                style="@style/SubTitleStyle"
                android:layout_marginLeft="@dimen/dimen_15"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_marginRight="@dimen/dimen_15"
                android:text="@string/dialog_voice_phishing_caution4" />

            <com.example.mvvmappapplication.custom.HSView
                style="@style/TitleLineStyle"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/dimen_15"
                android:layout_marginRight="@dimen/dimen_15" />

            <com.example.mvvmappapplication.custom.HSTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_15"
                android:layout_marginTop="@dimen/dimen_13"
                android:layout_marginRight="@dimen/dimen_15"
                android:lineSpacingExtra="@dimen/dimen_15"
                android:text="@string/dialog_voice_phishing_caution5"
                android:textSize="@dimen/dimen_12" />

            <com.example.mvvmappapplication.custom.HSView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1"
                android:layout_marginLeft="@dimen/dimen_12"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_12"
                android:background="?attr/listLineColor" />

            <com.example.mvvmappapplication.custom.HSTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_15"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_15"
                android:text="@string/dialog_voice_phishing_caution6"
                android:textSize="@dimen/dimen_14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_20"
                android:layout_marginLeft="@dimen/dimen_15"
                android:layout_marginTop="@dimen/dimen_13"
                android:layout_marginRight="@dimen/dimen_15"
                android:layout_marginBottom="@dimen/dimen_40"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.example.mvvmappapplication.custom.HSTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="?attr/ic_s_phone"
                    android:drawablePadding="@dimen/dimen_5"
                    android:gravity="center_vertical"
                    android:text="@string/dialog_voice_phishing_caution7"
                    android:textSize="@dimen/dimen_12"
                    android:textStyle="italic" />

                <com.example.mvvmappapplication.custom.HSView
                    android:layout_width="@dimen/dimen_1"
                    android:layout_height="@dimen/dimen_11"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:layout_marginRight="@dimen/dimen_20"
                    android:background="?attr/dividerLineColor" />

                <com.example.mvvmappapplication.custom.HSTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="?attr/ic_s_phone"
                    android:drawablePadding="@dimen/dimen_5"
                    android:gravity="center_vertical"
                    android:text="@string/dialog_voice_phishing_caution8"
                    android:textSize="@dimen/dimen_12"
                    android:textStyle="italic" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>